# cs179-diffusion

./: .gitignore  CMakeLists.txt  README.md
models/: model_bf16.safetensors
pyref/: debug.py  sample.py  train.py  unet.py
src/: main.cu  sample.cu  tests.cu
src/diffusion/: DiffusionConfig.h  DiffusionEDMPrecond.cuh  DiffusionEDMPrencond.cuh  DiffusionHelper.cuh  DiffusionKernels.cuh  DiffusionLayers.cuh  DiffusionLoader.cu  DiffusionLoader.h  DiffusionUNet.cuh  DiffusionWeights.h
src/gpu_ops/: MatrixVectorMultiply.cu
src/qwen2/: Qwen2Layer.cuh  Qwen2Model.cuh
